crates/solidity/testing/snapshots/bindings_output/using/global/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or BoolKeyword or BytesKeyword or ContractKeyword or EnumKeyword or FixedKeyword or FunctionKeyword or Identifier or ImportKeyword or IntKeyword or InterfaceKeyword or LibraryKeyword or MappingKeyword or PragmaKeyword or StringKeyword or StructKeyword or UfixedKeyword or UintKeyword.
   ╭─[counter.sol:7:1]
   │
 7 │ ╭─▶ using {increment} for Counter global;
 8 │ ├─▶ 
   │ │      
   │ ╰────── Error occurred here.
───╯
References and definitions: 
   ╭─[counter.sol:1:1]
   │
 1 │ struct Counter {
   │        ───┬───  
   │           ╰───── def: 1
 2 │     uint value;
   │          ──┬──  
   │            ╰──── def: 2
   │ 
 5 │ function increment(Counter memory _counter) public {}
   │          ────┬──── ───┬───        ────┬───  
   │              ╰────────────────────────────── def: 3
   │                       │               │     
   │                       ╰───────────────────── ref: 1
   │                                       │     
   │                                       ╰───── def: 4
───╯
References and definitions: 
   ╭─[main.sol:1:1]
   │
 1 │ import {Counter} from "counter.sol";
   │         ───┬───  
   │            ╰───── def: 5
   │            │     
   │            ╰───── ref: 1
   │ 
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── def: 6
 4 │     function test(Counter memory c) public {
   │              ──┬─ ───┬───        ┬  
   │                ╰──────────────────── def: 7
   │                      │           │  
   │                      ╰────────────── ref: 1
   │                                  │  
   │                                  ╰── def: 8
 5 │         c.increment();
   │         ┬ ────┬────  
   │         ╰──────────── ref: 8
   │               │      
   │               ╰────── unresolved
───╯
